# Shelfino_ROS2

./: .gitignore  cleanup  commands.txt  frames_2024-12-06_15.47.12.gv
.devcontainer/: devcontainer.dockerfile  devcontainer.json  setup.sh
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: Graph.msg  Result.msg
map_pkg/config/: map_config.yaml
map_pkg/config/demos/victims/: victims1.yaml  victims2.yaml  victims3.yaml  victims4.yaml
map_pkg/scripts/: generate_config_file.py
planning/: CMakeLists.txt  package.xml
planning/include/hammersley/: hammersley.cpp  hammersley.hpp
planning/include/planning/: dubins.cpp  dubins.hpp  dubins_solvers.cpp  dubins_solvers.hpp  graphs.cpp  graphs.hpp  mapgeometry.cpp  mapgeometry.hpp  utils.hpp
planning/include/taskplanning/: Matrix.cpp  Matrix.hpp
planning/launch/: planning.launch.py
planning/src/: .taskplanning.cpp.swp  .~lock.taskplanning.hpp#  roadmap_gen.cpp  roadmap_gen.hpp  robot_mover.cpp  robot_mover.hpp  taskplanning.cpp  taskplanning.hpp  taskplanning123.cpp
shelfino_motion/: CMakeLists.txt  package.xml
shelfino_motion/include/shelfino_motion/: motion_controller.hpp
shelfino_motion/launch/: motion_launch.py
shelfino_motion/src/: motion_controller.cpp
shelfino_navigation/config/: shelfino.yaml
taskplanning/: CMakeLists.txt  package.xml
taskplanning/src/: taskplanning.cpp
